<resources>
    <string name="app_name">My profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
    <string name="new_post">New post</string>
    <string name="about_me">About me</string>
    <string name="vk">VK</string>
    <string name="inst">Inst</string>
    <string name="linkedin">Linkedin</string>
    <string name="mail_dyulakov_mail_ru">mail: dyulakov@mail.ru</string>
    <string name="my_name">Юлаков Дмитрий Михайлович</string>
</resources>