<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_update"
        android:icon="@android:drawable/ic_popup_sync"
        android:title="@string/update"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:icon="?android:attr/actionModeWebSearchDrawable"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_new_post"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/new_post"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about_me"
        android:title="@string/about_me"
        app:showAsAction="never" />
</menu>